--- a/app/shared/css/shared.css
+++ b/app/shared/css/shared.css
@@ -316,12 +316,11 @@ table.availability-grid tr td {
 }
 
 .ipa-header .global-ui {
-	flex: 1 0 60%;
 	display: flex;
 }
 
 .ipa-header .page-specific-ui {
-	flex: 1 0 40%;
+	width: 100%;
 	display: flex;
 	justify-content: flex-end;
 }
