--- a/app/shared/directives/ipaHeader/ipaHeader.css
+++ b/app/shared/directives/ipaHeader/ipaHeader.css
@@ -6,6 +6,7 @@
 	background-color: white;
 	border-radius: 4px;
 	height: 31px;
+	min-width: 131px;
 }
 
 .ipa-header__workgroup-button {
@@ -14,6 +15,10 @@
 
 .ipa-header__cog-btn {
 	height: 31px;
+}
+
+.header--work-group {
+	min-width: 190px;
 }
 
 .header--work-group .ipa-header__workgroup-button {
